<?xml version="1.0" encoding="ISO-8859-1"?>
<resources>

    <!-- StartskÃ¤rm -->
    <string name="app_name">Game of Nature</string>
    <string name="start_button">Starta Nytt Spel</string>
    <string name="continue_button">Fortsätt Spel</string>

    <!-- Alternativskärm -->
    <string name="title_activity_alternativsida">AlternativSidaActivity</string>
    <string name="lagnamn">Lagnamn</string>
    <string name="lagfärg">Lagfärg</string>
    <string name="spelkaraktär">Spelkaraktär</string>
    <string name="colorbackgroundproperties">colorbackgroundproperties</string>
    <string name="bekräfta">Bekräfta</string>

    <string-array name="character_list">
        <item>Välj markör</item>
        <item>Groda</item>
        <item>Fjäril</item>
        <item>Nyckelpiga</item>
    </string-array>

    <integer-array name="character_img_list">
        <item>@android:color/transparent</item>
        <item>@drawable/frog</item>
        <item>@drawable/butterfly</item>
        <item>@drawable/bug</item>
    </integer-array>

    <!-- Spelplan -->
    <string name="title_activity_game_board">GameBoardActivity</string>

    <!-- Statistikskärm -->
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="team_name">Lagnamn:</string>
    <string name="game_time">Speltid:</string>

    <!-- Frågeskärm -->
    <string name="title_activity_question">QuestionActivity</string>
    <string name="question_topic">Textfråga</string>
    <string name="question">Hur många ben har en myra?</string>
    <string name="answer_1">2</string>
    <string name="answer_2">4</string>
    <string name="answer_3">6</string>
    <string name="answer_4">8</string>

    <!-- Slutuppgiftsskärm -->
    <string name="title_activity_finalquestion">FinalQuestionActivity</string>
    <string name="finalquestion_topic">Slutuppgift</string>
    <string name="finalquestion">Samla tre grankottar och visa för din lärare!</string>
    <string name="finalquestioncode">Kod för bekräftande</string>

    <!-- Övriga -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_task_dialog">TaskDialog</string>
    <string name="winner_title">Grattis! Du har vunnit spelet!</string>
    <string name="distance">Färdad sträcka: </string>
    <string name="title_activity_info_dialog">InfoDialog</string>
    <string name="title_activity_dialog">Dialog</string>

</resources>
