<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuestionActivity" >

    <Button
        android:id="@+id/question_btnAnswer4"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        android:text="@string/answer_4" />

    <Button
        android:id="@+id/question_btnAnswer3"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignLeft="@+id/button1"
        android:text="@string/answer_3" />

    <TextView
        android:id="@+id/question_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/question_topic" />

    <Button
        android:id="@+id/question_btnAnswer1"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_above="@+id/button4"
        android:layout_alignParentLeft="true"
        android:text="@string/answer_1" />

    <Button
        android:id="@+id/question_btnAnswer2"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/button3"
        android:text="@string/answer_2" />

    <TextView
        android:id="@+id/question_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/question" />

</RelativeLayout>