<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuestionActivity"
    android:background="@drawable/background_clear" >
   
    <TextView
        android:id="@+id/question_title"
        style="@style/questionTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/finalquestion_topic" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/finalquestioncode"
        android:visibility="visible" >

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/finalquestion_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/tree" />

    <TextView
        android:id="@+id/question_content"
        style="@style/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/finalquestion" />

</RelativeLayout>