<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_clear"
    tools:context=".OptionsActivity" >
		<!-- Lagnamn -->
        <TextView
            android:id="@+id/LagnamnView"
            android:textStyle="bold"
			style="@style/colourText"
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/lagnamn"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/LagnamnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:imeOptions="actionDone"/>
	<!-- Lagfärg -->
    <LinearLayout
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/LagfärgView"
            android:textStyle="bold"
			style="@style/colourText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/lagfärg"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <!-- Top Row -->
        <LinearLayout
            android:id="@+id/choose_colors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FF0000FF"
                android:contentDescription="@string/colorbackgroundproperties"
                android:src="@drawable/colorbackgroundproperties"
                android:tag="ff0000ff"
                android:onClick="colorClicked" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFF0000"
                android:contentDescription="@string/colorbackgroundproperties"
                android:src="@drawable/colorbackgroundproperties"
                android:tag="ffff0000"
                android:onClick="colorClicked" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFF00FF"
                android:contentDescription="@string/colorbackgroundproperties"
                android:src="@drawable/colorbackgroundproperties"
                android:tag="ffff00ff"
                android:onClick="colorClicked" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFFFF"
                android:contentDescription="@string/colorbackgroundproperties"
                android:src="@drawable/colorbackgroundproperties"
                android:tag="fffffff"
                android:onClick="colorClicked" />
        </LinearLayout>
        <!-- Bottom Row -->
         <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFF6600"
                android:contentDescription="@string/colorbackgroundproperties"
                android:src="@drawable/colorbackgroundproperties"
                android:tag="ffff6600"
                android:onClick="colorClicked" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FF00FFFF"
                android:contentDescription="@string/colorbackgroundproperties"
                android:src="@drawable/colorbackgroundproperties"
                android:tag="ff00ffff"
                android:onClick="colorClicked" />
            
   			<ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFA020F0"
                android:contentDescription="@string/colorbackgroundproperties"
                android:src="@drawable/colorbackgroundproperties"
                android:tag="ffa020f0"
                android:onClick="colorClicked" />
   
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF00"
                android:contentDescription="@string/colorbackgroundproperties"
                android:src="@drawable/colorbackgroundproperties"
                android:tag="ffffff00"
                android:onClick="colorClicked" />
             </LinearLayout>
    </LinearLayout>
    <!-- Spelkaraktär -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    <TextView
        android:id="@+id/SpelkaraktärView"
        android:textStyle="bold"
		style="@style/colourText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/spelkaraktär"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <Spinner
        android:id="@+id/character_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:entries="@array/character_list"
        tools:listitem="@android:layout/simple_spinner_item"/>
    <ImageView
        android:id="@+id/character_image"
        android:layout_marginLeft="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:scaleType="centerInside"
        android:src="@drawable/ic_launcher" />
    </LinearLayout>
   </LinearLayout>
   <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_gravity="center"
        android:layout_marginTop="40dp">
	<!-- Button för Bekräftning -->
    <Button
        android:id="@+id/alternative_confirmButton"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bekräfta"
        android:background="@drawable/button_up"
        android:onClick="nextScreen" />
    </LinearLayout>
</LinearLayout>